--- a/ANGULAR/RicetteSPA/src/index.html
+++ b/ANGULAR/RicetteSPA/src/index.html
@@ -11,6 +11,16 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
+    <link 
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet" 
+    />
+
+    <link
+      href="./styles.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
